--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -1,1 +1,5 @@
-<h4>Game Over!</h4>
+<h1 id="game_over_heading">You finished the night with...</h1>
+
+<h2 id="game_over_message">$<%= session[:player_money] %></h2>
+
+<a href="/new_player" id="game_over_restart" class="btn">Start a new game</a>
