--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
     <title>My First App</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/application.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/application.js"></script>
   </head>
   <body style="padding-top: 95px;">
 
@@ -15,9 +17,9 @@
             </ul>
             <ul class="nav pull-right">
               <li class="restart_button"><a href="/">Start Over</a></li>
-              <li><a href="/">About</a></li>
-              <li><a href="/">Blog</a></li>
-              <li><a href="/">Github</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="http://www.liamseanbrady.wordpress.com" target="blank">Blog</a></li>
+              <li><a href="http://github.com/liamseanbrady" target="blank">Github</a></li>
             </ul>
         </div>
       </div>
