Make app more ajax-friendly. Add changes to about page copy.

--- a/views/about.erb
+++ b/views/about.erb
@@ -6,7 +6,7 @@
       <img src="/images/about/me_img.png" class="about_img">
     </div>
     <div class="span8 about_section">
-      <p>My name is <em>Liam Brady</em>. I live in <em>Scotland</em>. I enjoy coding, being creative and working out. Feel free to reach out to me on my blog! I'm always <em>open to learning from others</em>. </p>
+      <p>My name is <em>Liam Brady</em>. I live in <em>Scotland</em>. I enjoy coding, being creative and working out. Feel free to reach out to me on <a href="http://www.liamseanbrady.wordpress.com" target="blank">my blog</a>! I'm always <em>open to learning from others</em>. </p>
     </div>
 
   </div>
@@ -17,7 +17,7 @@
   <div class="row about_row">
 
     <div class="span8 about_section">
-            <p>The particular coding <em>challenges I faced</em> whilst building <em>FlatJack</em> were <em>persisting data in a stateless ecosystem</em>, and also dealing with the complexity that comes with working with the <em>multiple files</em> that make up the application.</p>
+            <p>The particular <em>coding challenges I faced</em> whilst building <em>FlatJack</em> were effectively <em>persisting data using a cookie</em>, and also dealing with the <em>growing complexity</em> of the <em>multiple files</em> that make up the application.</p>
     </div>
     <div class="span4 image_holder about_section">
       <img src="/images/about/code_img.png" class="about_img">
