--- a/views/bet.erb
+++ b/views/bet.erb
@@ -1,14 +1,17 @@
-<div class="span-7">
-  <form action="/bet" method="post" class="form">
-    <br/>
-    <label>Place your bet for this round ($)</label>
-    <input type="text" name="current_bet" placeholder="$ "> <span class="form_suffix well error">minimum bet = $50</span> <span class="form_suffix well success">maximum bet = $<%= session[:player_money] %></span>
-    <br/>
-    <input type="submit" value="Place bet" class="btn btn-primary">
-  </form>
-</div> 
+<div class="row">
+  <div class="span-7">
+    <form action="/bet" method="post" class="form">
+      <br/>
+      <label>Place your bet for this round ($)</label>
+      <input type="text" name="current_bet" placeholder="$ "> <span class="form_suffix well error">minimum bet = $50</span> <span class="form_suffix well success">maximum bet = $<%= session[:player_money] %></span>
+      <br/>
+      <input type="submit" value="Place bet" class="btn btn-primary">
+    </form>
+  </div> 
+</div>
 
-<div class="span-3 offset1 ">
+<div class="row">
+  <div class="span-3 offset1 ">
   <div class="well player_history">
     <h2 class="headline"><strong><%= session[:player_name] %>'s</strong> Game History</h2>
 
@@ -28,4 +31,5 @@
       </ul>
     <% end %>
   <div>
+</div>
 </div> 
