--- a/views/bet.erb
+++ b/views/bet.erb
@@ -1,35 +1,34 @@
-<div class="row">
-  <div class="span-7">
-    <form action="/bet" method="post" class="form">
-      <br/>
-      <label>Place your bet for this round ($)</label>
-      <input type="text" name="current_bet" placeholder="$ "> <span class="form_suffix well error">minimum bet = $50</span> <span class="form_suffix well success">maximum bet = $<%= session[:player_money] %></span>
-      <br/>
-      <input type="submit" value="Place bet" class="btn btn-primary">
-    </form>
-  </div> 
-</div>
+<div class="container">
+  <div class="row">
+    <div class="span-7">
+      <form action="/bet" method="post" class="form">
+        <br/>
+        <label>Place your bet for this round ($)</label>
+        <input type="text" name="current_bet" placeholder="$ "> <span class="form_suffix well error">minimum bet = $50</span> <span class="form_suffix well success">maximum bet = $<%= session[:player_money] %></span>
+        <br/>
+        <input type="submit" value="Place bet" class="btn btn-primary">
+      </form>
+    </div> 
 
-<div class="row">
-  <div class="span-3 offset1 ">
-  <div class="well player_history">
-    <h2 class="headline"><strong><%= session[:player_name] %>'s</strong> Game History</h2>
+    <div class="span-4 offset1">
+    <div class="well player_history">
+      <h2 class="headline"><strong><%= session[:player_name] %>'s</strong> Game History</h2>
 
-    <% if session[:player_history].empty? %>
-      <p>You haven't played any games yet...</p>
-    <% else %>
-      <ul>
-        <% session[:player_history].each do |result| %>
-          <% if result == "won" %>
-            <li class="won"><%= result.to_s.capitalize %></li>
-          <% elsif result == "lost" %>
-            <li class="lost"><%= result.to_s.capitalize %></li>
-          <% else %>
-            <li class="tied"><%= result.to_s.capitalize %></li>
+      <% if session[:player_history].empty? %>
+        <p>You haven't played any games yet...</p>
+      <% else %>
+        <ul>
+          <% session[:player_history].each do |result| %>
+            <% if result == "won" %>
+              <li class="won"><%= result.to_s.capitalize %></li>
+            <% elsif result == "lost" %>
+              <li class="lost"><%= result.to_s.capitalize %></li>
+            <% else %>
+              <li class="tied"><%= result.to_s.capitalize %></li>
+            <% end %>
           <% end %>
-        <% end %>
-      </ul>
-    <% end %>
-  <div>
+        </ul>
+      <% end %>
+    <div>
+  </div>
 </div>
-</div> 
