--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First App</title>
+    <title>Flatjack</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
       <div class="navbar-inner">
         <div class="container">
             <ul class="nav">
-              <li class="logo"><a href="#"><img src="/images/logo/logo.png"></a></li>
+              <li class="logo"><a href="/"><img src="/images/logo/logo.png"></a></li>
             </ul>
             <ul class="nav pull-right">
               <li class="restart_button"><a href="/">Start Over</a></li>
@@ -38,7 +38,7 @@
     <% end %>
 
       <%= yield %>
-      
+
   </div>
   </body>
 </html>
