--- a/public/application.css
+++ b/public/application.css
@@ -100,7 +100,7 @@ select {
 }
 
 .form_suffix {
-  color: #D1D1D1;
+  color: #CDCDCD;
   font-size: 1em;
   font-weight: 400;
   margin-left: 20px;
@@ -147,15 +147,22 @@ h2.welcome {
 .player_history p {
   font-size: 1.1em;
   color: #D5D5D5;
-  padding-left: 10px;
+  padding-left: 5px;
   font-weight: 500;
 }
 
+.player_history ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 4px;
+}
+
 .player_history li {
-  font-size: 1.2em;
-  font-weight: 600;
-  list-style-type: none;
-  margin-bottom: 5px;
+  font-size: 1.4em;
+  font-weight: 500;
+  list-style: none;
+  margin-bottom: 15px;
+  padding-left: 0;
 }
 
 .player_history li.won {
